# placeholder

./: .gitignore  CMakeLists.txt  README.md
cmake/: imgui.cmake  shaderc.cmake  spdlog.cmake
configuration/: config.h  config.h.in
docs/: BuildShaderc.md  Design.md  todo.md
examples/: CMakeLists.txt  Sandbox2D.h
src/: CMakeLists.txt  Main.cpp  Placeholder.h  Test.cpp
src/placeholder/: Application.cpp  Application.h  Config.h  Core.h  EntryPoint.h  Log.cpp  Log.h  plpch.h
src/placeholder/core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  IWindow.cpp  IWindow.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  PlatformUtils.cpp  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
src/placeholder/debug/: Instrumentor.h
src/placeholder/events/: Event.h  EventApplication.h  EventKey.h  EventMouse.h  Eventkey.h
src/placeholder/gui/: GUIBuild.cpp  GUILayer.cpp  GUILayer.h
src/placeholder/math/: Math.cpp  Math.h
src/placeholder/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/placeholder/renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/placeholder/scene/: Components.h  SceneCamera.cpp  SceneCamera.h
src/placeholder/utils/: PlatformUtils.h
tests/: CMakeLists.txt  Main.cpp  Sandbox2D.cpp  SandboxApp.cpp
